# stockdata77

./: .gitignore  CHANGELOG.md  LICENSE  MiniStocks.xlsx  README.md  build_and_install.sh  cbr_exch_rates.py  pyproject.toml  sample_cli.py  sp.py  stockquotes.py
BAK/: sp v1.py  sp v2.py
moex/: AFLT.xml  API Мосбиржи.txt  API Мосбиржи.xlsx
moex/iss_examples/vb.net/: ISS_Demo_1.sln
moex/iss_examples/vb.net/ISS_Demo_1/: ISS_Demo_1.vbproj  MainForm.Designer.vb  MainForm.resx  MainForm.vb  MicexAuth.vb  MicexISSClient.vb  MicexISSDataHandler.vb
moex/iss_examples/vb.net/ISS_Demo_1/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
src/stockdata/: __init__.py  stock.py
src/stockdata77/: __init__.py  stock.py
src/stockquotes/: __init__.py  stock.py
yf/: Useful links.txt  YF API fields.docx  nyse-listed.xlsx  other-listed.xlsx  yf_spy_sample.json
