[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockquotes"
version = "0.0.2"
authors = [
  { name="Dandelion Systems", email="dandelion.systems@gmail.com" },
]
description = "Interface to real-time providers of securities trading data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
	"stocks", "trading",
    "NYSE", "Nasdaq",
	"Yahoo Finance", "MOEX",
    "real-time price"
]

[project.urls]
"Homepage" = "https://github.com/dandelion-systems/stockquotes"
"Bug Tracker" = "https://github.com/dandelion-systems/stockquotes/issues"