[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockdata77"
version = "0.0.3"
authors = [
  { name="Dandelion Systems", email="dandelion.systems@gmail.com" },
]
description = "Interface to providers of securities trading data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
keywords = [
	"stocks", "trading", "NYSE", "Nasdaq", "FMP", "AV", "Alpha Vantage", "Yahoo Finance", "MOEX"
]

[project.urls]
"Homepage" = "https://github.com/dandelion-systems/stockdata77"
"Bug Tracker" = "https://github.com/dandelion-systems/stockdata77/issues"
